# crypto-ai-trader

./: .env.example  .gitignore  Makefile  README.md  README_1.md  README_PHASE0.md  cli.py  create_files.py  main.py  pyproject.toml  quick_deploy_script.py  requirements-dev.txt  requirements.txt
ai/: __init__.py  enchanced_analyzer.py  mock_analyzer.py  openai_analyzer.py
api/: main.py
backtest/: backtester.py
client_management/: deposit_system.py
config/: settings.py  trading_config.py
core/: __init__.py  emergency_closer.py  engine.py  event_bus.py  exceptions.py  order_manager.py  portfolio.py  scalable_engine.py
core/engine/: __init__.py  enhanced_signal_processor.py  exchange_manager.py  market_analyzer.py  notification_manager.py  position_manager.py  signal_processor.py  strategy_manager.py  trading_engine.py
data/: __init__.py
data/collectors/: exchange_collector.py
data/processors/: technical_processor.py
data/storage/: database.py
docker/: Dockerfile  docker-compose.yml  nginx.conf
exchange/: base_exchange.py  binance_client.py  bybit_client.py
models/: trading_signals.py
notifications/: telegram_bot.py
risk/: calculators.py  metrics.py  monitors.py  risk_manager.py
scripts/: integrated_backtest.py  run_tests.py  setup_project.py
tests/: conftest.py  test_backtester.py  test_basic.py  test_missing_functions.py  test_risk_manager.py  test_strategies.py
trading/strategies/: ai_driven.py  base_strategy.py  grid_strategy.py  simple_momentum.py
utils/: __init__.py  helpers.py  logger.py
web/templates/: dashboard.html
